correction modifier block with fix solution align

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -88,14 +88,16 @@ nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
+	color: black;
 }
-nav li {
+nav li a {
 	padding: 0 10px;
 	font-size: 1.2em;
+	color:black;
+	text-decoration: none;
 }
 
-li:hover {
+nav li a:hover {
 	color: #B1663C;
 }
 
@@ -122,20 +124,36 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
-#portfolio {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	text-align: center;
-	margin-bottom: 1em;
-}
 
 .StylePortfolio {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 20px;
-	margin-bottom: 2em;
+	gap: 12px;
+	flex-wrap: wrap;
+	margin-bottom: 20px;
+}
+
+.StylePortfolio h2 {
+	margin: 0;
+}
+
+.modifier-block {
+	display: flex;
+	align-items: center;
+	gap: 6px;
+}
+
+.modifier-block i,
+.modifier-block a {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.modifier-block i:hover,
+.modifier-block a:hover {
+	color: #B1663C;
 }
 
 .gallery {
@@ -287,7 +305,17 @@ footer nav ul {
 	padding: 10px 0;
 	font-family: 'Work Sans';
 	font-weight: 400;
-	z-index: 1000;
+	z-index: 10;
 }	
 
-
+#ModaleEdition {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: white;
+	padding: 20px;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	z-index: 11;
+	display: none;
+}	
